# cmake-sfml-imgui-game_class

./: CMakeLists.txt
headers/: Game.hpp
src/: Game.cpp
